	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.5-rc4 (in progress)

 * documentation fixes.
 * bugfix: description file reading could crash due to wrong check.
 * bugfix: expando mechanism crashed on long comment strings.
 * bugfix: in --as-text will avoid repeated reload of file.

                Version 0.5-rc3

 * fix: mouse movement under SDL used to trigger unnecessary screen redraws.
 * bugfix: on certain framebuffer configurations part of the screen would not be redrawn.
 * bugfix: conversion from external program was vulnerable to failure due to missing check.
 * fix: gif error handling could have led to NULL pointer usage.
 * fix: the largest mipmap was not always being used.
 * fix: -lfl linkage is not really necessary: removed it.
 * fix: support for PPM files with 2 bytes per sample.
 * fix: configure script regex_t check was unnecessarily broken
 * fix: was likely using uninitialized data in Image()
 * fix: a few more checks when reading PCX files
 * bugfix: a function in AADevice was missing return value
 * documented the %k expando for _info_fmt_str and bugfix (avoiding data corruption when handling %k)
 * to ease reproducible builds: imposing LC_ALL=C to $(YACC) and $(SORT), vim2html.pl reads SOURCE_DATE_EPOCH
 * fix: when stdint.h is available use uint8_t, uint16_t, uint32_t instead of non-portable __u8, __u16, __u32
 * fix: ./configure --disable-pcx was not properly disabling PCX format support
 * fix: compilation was broken without framebuffer (FIM_WITH_NO_FRAMEBUFFER)
 * fix: compilation was broken without FIM_WITH_LIBSDL configured in
 * fix: with _re_search_opts='f' the in-descriptions search was broken
 * fix: removed obsolete documentation for the "window" command, now disabled
 * bugfix: repeating "recording 'repeat_last'" (default '.' key) by prepending a number now works
 * fix: cleaned up the internal keysyms initialization code